# cell-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  run.sh
.github/workflows/: buildImage.yml  ci.yml
migrations/2023-07-14-143050_create_cells/: down.sql  up.sql
migrations/2023-07-17-064514_create_last_updates/: down.sql  up.sql
migrations/2025-12-20-160729-0000_add_cdma_radio_type/: down.sql  up.sql
migrations/2026-01-08-141836-0000_reorder_primary_key/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/handlers/: cell.rs  cells.rs  lookup.rs  mod.rs
src/utils/: config.rs  data.rs  db.rs  mod.rs  server.rs  telemetry.rs  test_db.rs  update_type.rs  url_builder.rs  utils.rs
tests/fixtures/: test-cells.csv
