[package]
name = "racemap-cells"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.171", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde_with = { version = "3.0.0", features = ["chrono"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["full"] }
libflate = "2.0.0"
futures = { version = "0.3.28" }
tokio-util = { version = "0.7.8", features = ["compat"] }
async-compression = { version = "0.4.1", features = ["tokio", "gzip"] }
lazy_static = "1.4.0"
warp = "0.3.5"