[package]
name = "racemap-cell-service"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration_tests = ["testcontainers", "testcontainers-modules"]

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.171", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_with = { version = "3.0.0", features = ["chrono"] }
serde_json = "1"
diesel = { version = "2.2", features = ["mysql", "chrono"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["mysql"] }
dotenvy = "0.15"
reqwest = { version = "0.11.18", features = ["stream", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
libflate = "2.0.0"
futures = { version = "0.3.28" }
tokio-util = { version = "0.7.8", features = ["compat"] }
async-compression = { version = "0.4.1", features = ["tokio", "gzip"] }
lazy_static = "1.4.0"
warp = "0.3.5"
base64 = "0.22"
once_cell = "1.21.3"
testcontainers = { version = "0.23", features = ["blocking"], optional = true }
testcontainers-modules = { version = "0.11", features = [
    "mariadb",
], optional = true }
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-stdout = { version = "0.2", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
serde_urlencoded = "0.7"
diesel_migrations = "2.2"
